--- a/app/main.html
+++ b/app/main.html
@@ -47,6 +47,18 @@
 							</div>
 						</div>
 					</div>
+					<div class="header-mobile__toggle">
+						<div class="header-mobile__toggle-menu">
+							<svg class="icon">
+								<use xlink:href="#menu"></use>
+							</svg>
+						</div>
+						<a class="header-mobile__toggle-cart" href="#">
+							<svg class="icon">
+								<use xlink:href="#basket"></use>
+							</svg>
+						</a>
+					</div>
 					<div class="header-soc">
 						<a class="header-soc__el" href="#">
 							<svg class="icon">
@@ -195,7 +207,7 @@
 					<div class="section-list__cont">
 						<div class="section-list__el">
 							<div class="section-list__el-img-wrap">
-								<a href="#">
+								<a class="section-list__el-link" href="#">
 									<div class="section-list__el-img" style="background-image:url('img/item-card.png')"></div>
 								</a>
 								<a class="section-list__el-title" href="#">Обед с домашним пирожком</a>
@@ -210,7 +222,7 @@
 						</div>
 						<div class="section-list__el">
 							<div class="section-list__el-img-wrap">
-								<a href="#">
+								<a class="section-list__el-link" href="#">
 									<div class="section-list__el-img" style="background-image:url('img/item-card.png')"></div>
 								</a>
 								<a class="section-list__el-title" href="#">Обед с домашним пирожком</a>
@@ -225,7 +237,7 @@
 						</div>
 						<div class="section-list__el">
 							<div class="section-list__el-img-wrap">
-								<a href="#">
+								<a class="section-list__el-link" href="#">
 									<div class="section-list__el-img" style="background-image:url('img/item-card.png')"></div>
 								</a>
 								<a class="section-list__el-title" href="#">Обед с домашним пирожком</a>
@@ -248,7 +260,7 @@
 					<div class="section-list__cont">
 						<div class="section-list__el">
 							<div class="section-list__el-img-wrap">
-								<a href="#">
+								<a class="section-list__el-link" href="#">
 									<div class="section-list__el-img" style="background-image:url('img/item-card.png')"></div>
 								</a>
 								<a class="section-list__el-title" href="#">Обед с домашним пирожком</a>
@@ -263,7 +275,7 @@
 						</div>
 						<div class="section-list__el">
 							<div class="section-list__el-img-wrap">
-								<a href="#">
+								<a class="section-list__el-link" href="#">
 									<div class="section-list__el-img" style="background-image:url('img/item-card.png')"></div>
 								</a>
 								<a class="section-list__el-title" href="#">Обед с домашним пирожком</a>
@@ -278,7 +290,7 @@
 						</div>
 						<div class="section-list__el">
 							<div class="section-list__el-img-wrap">
-								<a href="#">
+								<a class="section-list__el-link" href="#">
 									<div class="section-list__el-img" style="background-image:url('img/item-card.png')"></div>
 								</a>
 								<a class="section-list__el-title" href="#">Обед с домашним пирожком</a>
@@ -300,8 +312,10 @@
 								<use xlink:href="#card"></use>
 							</svg>
 						</div>
-						<div class="section-adv__el-title">Удобно</div>
-						<div class="section-adv__el-text">Вы можете оплатить заказ наличными или картой онлайн</div>
+						<div class="section-adv__el-wrap">
+							<div class="section-adv__el-title">Удобно</div>
+							<div class="section-adv__el-text">Вы можете оплатить заказ наличными или картой онлайн</div>
+						</div>
 					</div>
 					<div class="section-adv__el">
 						<div class="section-adv__el-icon">
@@ -309,8 +323,10 @@
 								<use xlink:href="#roket"></use>
 							</svg>
 						</div>
-						<div class="section-adv__el-title">Быстро</div>
-						<div class="section-adv__el-text">У нас своя служба доставки, поэтому мы доставим Вам питание всегда вовремя и в удобное для Вас время</div>
+						<div class="section-adv__el-wrap">
+							<div class="section-adv__el-title">Быстро</div>
+							<div class="section-adv__el-text">У нас своя служба доставки, поэтому мы доставим Вам питание всегда вовремя и в удобное для Вас время</div>
+						</div>
 					</div>
 					<div class="section-adv__el">
 						<div class="section-adv__el-icon">
@@ -318,8 +334,10 @@
 								<use xlink:href="#present"></use>
 							</svg>
 						</div>
-						<div class="section-adv__el-title">Бесплатно</div>
-						<div class="section-adv__el-text">Доставка осуществляется по всей Москве и совершенно бесплатно</div>
+						<div class="section-adv__el-wrap">
+							<div class="section-adv__el-title">Бесплатно</div>
+							<div class="section-adv__el-text">Доставка осуществляется по всей Москве и совершенно бесплатно</div>
+						</div>
 					</div>
 					<div class="section-adv__el">
 						<div class="section-adv__el-icon">
@@ -327,8 +345,10 @@
 								<use xlink:href="#reward"></use>
 							</svg>
 						</div>
-						<div class="section-adv__el-title">Качественно</div>
-						<div class="section-adv__el-text">Все наши блюда соответствуют нормам САНПин и полностью сертифицированы</div>
+						<div class="section-adv__el-wrap">
+							<div class="section-adv__el-title">Качественно</div>
+							<div class="section-adv__el-text">Все наши блюда соответствуют нормам САНПин и полностью сертифицированы</div>
+						</div>
 					</div>
 				</div>
 				<div class="section-list">
@@ -339,7 +359,7 @@
 					<div class="section-list__cont">
 						<div class="section-list__el">
 							<div class="section-list__el-img-wrap">
-								<a href="#">
+								<a class="section-list__el-link" href="#">
 									<div class="section-list__el-img" style="background-image:url('img/item-card.png')"></div>
 								</a>
 								<a class="section-list__el-title" href="#">Обед с домашним пирожком</a>
@@ -354,7 +374,7 @@
 						</div>
 						<div class="section-list__el">
 							<div class="section-list__el-img-wrap">
-								<a href="#">
+								<a class="section-list__el-link" href="#">
 									<div class="section-list__el-img" style="background-image:url('img/item-card.png')"></div>
 								</a>
 								<a class="section-list__el-title" href="#">Обед с домашним пирожком</a>
@@ -369,7 +389,7 @@
 						</div>
 						<div class="section-list__el">
 							<div class="section-list__el-img-wrap">
-								<a href="#">
+								<a class="section-list__el-link" href="#">
 									<div class="section-list__el-img" style="background-image:url('img/item-card.png')"></div>
 								</a>
 								<a class="section-list__el-title" href="#">Обед с домашним пирожком</a>
